# kfire-client

./: LICENSE  README.md  package.json  pnpm-lock.yaml
.github/workflows/: release.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: api.rs  db.rs  lib.rs  main.rs  scanner.rs  status.rs  update.rs  ws.rs
src-tauri/tests/: integration.rs
src/routes/: +page.svelte
