[package]
name = "kfire-client"
version = "0.1.0"
description = "KFIRE desktop client — lightweight tray app that detects running games and reports presence to your org's KFIRE server"
authors = ["Knights of Eternity"]
license = "MIT"
repository = "https://github.com/knightsofeternity/kfire-client"
edition = "2021"

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "kfire_client_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Local process scanning (game detection)
sysinfo = "0.33"
# TODO(mvp): offline queue of pending presence events
# rusqlite = { version = "0.32", features = ["bundled"] }
# TODO(mvp): WebSocket push to kfire-server (see kfire-protocol/websocket-events.md)
# tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }

[profile.release]
strip = true
lto = true
codegen-units = 1
