[package]
name = "kfire-client"
version = "0.1.1"
description = "KFIRE desktop client - lightweight tray app that detects running games and reports presence to your org's KFIRE server"
authors = ["Knights of Eternity"]
license = "MIT"
repository = "https://github.com/knightsofeternity/kfire-client"
edition = "2021"

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "kfire_client_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
# Launch-at-login (registry on Windows, LaunchAgent on macOS, .desktop on Linux)
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Local process scanning (game detection)
sysinfo = "0.39"
# Local cache: settings, games catalog, offline event queue
rusqlite = { version = "0.32", features = ["bundled"] }
# REST control plane (login, refresh, games download)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
# Real-time presence push (see kfire-protocol/websocket-events.md)
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
log = "0.4"
env_logger = "0.11"

[profile.release]
strip = true
lto = true
codegen-units = 1
